--- a/literature_review/Covid19_literature_notes.Rmd
+++ b/literature_review/Covid19_literature_notes.Rmd
@@ -108,6 +108,31 @@ The review of existing (mainly grey or media-based) accounts on COVID-
 
 #### Method \
 
+#### Conclusion \
+
+## @Mallory.2020
+
+#### Point of analysis \
+
+* What the virus did to patterns of US and BRazilian exports of major commodities during the first surge of the virus during April and May, 2020.
+  + detailed comparison of how US exports of soybeans, corn, beef and pork and poultry in the first 8 months of 2020 compared to the previous seven years. 
+* And also speculate on what may happen during the beginning of North American winter in late 2020
+
+
+#### Data \
+
+* for grains: US export data from USDA AMS Federal Grain Inspection Service
+* for meat:
+  + NASS QuickStats and
+  + USDA ERS Livestock and Meat Trade Data
+
+#### Findings \
+
+Grain, oilseed and poultry export shipments have been relatively unaffected but beef and pork export shipments experiences signifcant reductions with Brazil filling the shortfall in both cases.
+
+#### Method \
+
+Data comparison, descriptive satistics, speculation
 
 
 #### Conclusion \
