--- a/literature_review/Covid19_LiteratureReviewNotes.Rmd
+++ b/literature_review/Covid19_LiteratureReviewNotes.Rmd
@@ -1,8 +1,9 @@
 ---
 title: "COVID19 Impacts on smallholders literature"
-output: 
-  html_document: default
+output:
   pdf_document: default
+  html_document: default
+  word_document: default
 bibliography: C:/Users/latzko/ownCloud/CRC 990/Landscape_Assessment/LandscapeAssessmentR/literature_review/covid_impacts_literature.bib
 ---
 
@@ -164,6 +165,9 @@ The crisis' necessary remedies do tremendous harm to the economy. Meat supply ch
 
 #### Findings \
 
+* "at the time of writing, Covid-19 had not been tamed in Indonesia my any means."
+* Poverty impacts remain uncertain but may be less severe than some other impacts
+* Informal workers can be seriously hit by the crisis and its consequences such as social distancing measures and lockdowns
 
 
 #### Method \
@@ -171,8 +175,156 @@ The crisis' necessary remedies do tremendous harm to the economy. Meat supply ch
 
 #### Conclusion \
 
+*   The poverty impacts of the Covid-19 crisis (as of June, 2020) remain unvertain but may be less severe than some other impacts
+*   Well-design stimulus measures will help once the pandemic has been brought under control
+
+##### Potential long-term implications: 
+
+* negative nutrition outcomes (stunting, wasting)
+* Jordà, Singh and Taylor (2020) find that a shift to precautionary savings by households and individuals is typical during pandemics
+* Increased risk aversion will further depress the equilibrium interest rate. Banks will have to hold the excess liquidity caused by a lack of viable projects due to expectations that repressed economic activity will continue. --> liquidity trap.
+  + The massive increases in the supply of money are met with only limited use of it by households and businesses (Stiglitz and Rashid 2020) 
+
+
+## @Obayelu2021
+
+#### Point of analysis \
+
+The study 
+
+* assesses the trend of COVID-19 in Nigeria between the end of February 2020 till the beginning of January 2021;
+* examines the immediate short-term and potential long-term effects of COVID-19 outbreak on the socioeconomics, agricultural systems, security of food and dietary intake in Nigeria;
+* assesses the various actions taken against the COVID-19 in Nigeria to prevent deteriorating socioeconomic, food security and dietary intake conditions of people in Nigeria; and
+* suggests the potential mitigation strategies to combat the effects of COVID-19 on agriculture, food security and nutrition in Nigeria.
+* $N = 72$ respondents
+
+
+#### Data \
+
+* Mainly based on "personal observations, public opinion through mobile telephone survey of farm households
+residing in Lagos and Ibadan in Lagos and Oyo States, Nigeria, respectively, but have their farms located outsides their places of residence.
+* The study conducts a rapid assessment survey that comprised of a structured questionnaire package
+
+
+#### Findings \
+
+*   About 65% households interviewed was found to rationed food they eat
+*   a COVID-19 impact survey conducted by the National Bureau of Statistics (NBS) shows that a 51% of households reduced their food consumption to cope with the shocks of the pandemic (NBS 2020)
+
+#### Method \
+
+
+
+#### Conclusion \
+
+The shock of COVID-19 is not only a demand management problem but
+a multidimensional crisis requiring monetary, fiscal, and health policy responses with global
+collaboration and cooperation.
+
+
+## @Goswami2021
+
+#### Point of analysis \
+
+The study explores the multiple pathways of present and future impact created by the pandemic and “Amphan” cyclonic storm on smallholder agricultural systems. Also, the study anticipates the behavior of the systems elements under different realistic scenarios of intervention. It also explored the severity and multi-faceted impacts of the pandemic on vulnerable smallholder agricultural production systems through in-depth interactions with key players at the micro-level.
+
+#### Data \
+
+
+
+#### Findings \
+
+
+
+#### Methods \
+
+* Qualitative exploration
+  +   consultation with the key informants with whom the authors had been working for several years.
+  +   conducted individual interviews with farmers by respecting the pandemic’s rule of social distancing, especially during the lockdown.
+* Fuzzy cognitive mapping (FCM)
+  +   FCM is a ‘mental modelling’ approach to create a map of cognition for individuals concerning a given problem space
+  +   A mental model is an internally held representation of external reality by an individual (Jones et al., 2011) and
+  may embody their reasoning about the structure and functioning of complex systems.
+  +   multi-stakeholder workshops (for FCM), were not possible during the lockdown
+
+#### Conclusion \
+
+
+## @Suryahadi2020
+
+#### Point of analysis \
+
+Estimate the impact of Covid-19 on poverty in Indonesia
+
+#### Data \
+
+* Forecast is based on historical economic shocks in Indonesia.
+  +   1997–98 Asian financial crisis.
+  +   2005–06 large increases in the prices of fuel, especially kerosene
+    -    rice price also increased
+  
+  
+#### Findings \
+
+see conclusion
+
+#### Methods \
+
+  * Translation of the impact of Covid-19 on economic growth into impact on average per capita household expenditure
+  * $\Delta logPCE_t =\alpha +\beta \Delta gGDP_t +\epsilon$
+    + $\Delta logPCE$ is change in the logarithm of average per capita household expenditure,
+    + $\Delta gGDP$ is change in the rate of economic growth,
+    + $\beta$ is the correlation parameter to be estimated
+      - The model can be estimated using time series data on economic growth and average per capita household expenditure
+
+#### Conclusion \
+
+*   In contrast to the baseline projection of a 5% economic growth rate for 2020, various recent projections propose that Covid-19 will reduce Indonesia’s economic growth rate to between 4.2% and –3.5%.
+* Best case scenario of Covid-19 impact (economic growth rate falls to 4.2%):
+  + poverty rate increases from 9.2% in September 2019 to 9.7% by the end of 2020.
+  + 1.3 mio people more in poverty
+* worst-case scenario (economic growth rate falls to -3.5%):
+  +   poverty rate increases to 16.6%
+  +   19.7 million more people become poor
+  
+
+## @Goeb2020
+
+#### Point of analysis \
+
+To understand how Myanmar’s crop marketing system has been affected by the COVID-19 crisis, phone interviews were conducted with more than 100 agricultural commodity traders roughly every 30 days from late May until early August 2020. A round of qualitative interviews was also conducted with key informants on land-trading routes to China, Thailand, and India.
+
+#### Data \
+
+*  qualitative interviews with 100 agricultural commodity traders roughly every 30 days from late May until early August 2020 (4 months)
+
+#### Findings \
+
+Traders who reported that the pandemic is affecting their business in any way declined from 77 percent in late May to 43 percent in early August. Buying and marketing challenges were the most common disruptions reported in early August, followed by difficulties in collecting repayments on credit lent out to farmers. Increasing numbers of traders also reported difficulties in obtaining new loans or credit for their business.
+  +   increased mobile phone use (ICTs) for marketing of products
+* Higher shares of traders reported year-on-year decreases both in credit provision and in wholesale trading volumes in August compared to June.
+* More traders report a decrease in competition than an increase since the crisis began.
+* Crop buying and selling prices have been stable on average between April and August.
+* Border gate closures at the China (Muse), Thailand (Myawaddy), and India (Tamu) borders have resulted in drastic reductions in overland exports of agricultural commodities since March 2020. Key informants said that there has been almost no crop trading to China and India, while exports to Thailand are down over half compared to a year ago.
+
+##### Recommended actions for policy
+
+* Coordinate domestic transport restrictions put in place in response to the recent second wave of COVID-19 to allow continued domestic trade of agricultural commodities.
+* Facilitate safe exports of agricultural commodities. This should be done with formal agreements and government investments in monitoring and infrastructure. If borders remain closed into the monsoon harvest season later in 2020, farmers should expect to receive poor prices for their crops.
+* Quickly expand the provision of loans for working capital to crop traders (CERP Action 2.1.1). This will enable traders to continue their buying activities through the coming harvest and prevent a possible decline in competition in the sector.
+* Continue the waiver of the 2 percent withholding tax for crop traders (CERP Action 2.1.3).
+
+#### Methods \
+
+Qualitative interviews, descriptive statistics
+
+#### Conclusion \
+
+The qualitative interviews highlight the magnitude of the disruptions faced by agricultural commodity traders involved in cross-border trade due to COVID-19 restrictions. None of the respondents expects these restrictions to be lifted in time for the coming monsoon harvest. Decreased export demand for Myanmar’s agricultural commodities will put downward pressure on prices and have negative effects on Myanmar’s rural economies that already are hard hit by the COVID-19 crisis.
 
 
 
 ## Reference list
+
+
 
